--- a/login.html
+++ b/login.html
@@ -12,100 +12,43 @@
   referrerpolicy="no-referrer"/>
    <link rel="stylesheet" href="style.css"> 
    <link rel="stylesheet" href="mobile.css"> 
-  <style>
-
-    #textreg{
-      text-align: center;
-      color : white;
-      font-size: 4rem;
-      text-shadow: 5px 5px 5px white;
-      margin: 5vmin;
-    }
-    .regform{
-      height : 80vh;
-      background-color: black;
-
-   
-    }
-   .input-box{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap : 5vmin;
-      flex-wrap: wrap;
-      max-width : 1200px;
-      margin: auto;
-    }
-    .inputlogin{
-      width : 70vmin;
-     /* width : 200px; */
-     flex-grow: 1;
-     background: transparent;
-     padding: 3vmin;
-     border: none;
-     border-bottom: 2px solid white;;
-    }
-    .inputlogin::placeholder{
-       font-size: 1.5rem;
-       font-weight: bolder;
-       color : red;
-    }
-    .passlogin{
-      width : 70vmin;
-     /* width : 200px; */
-     flex-grow: 1;
-     background: transparent;
-     padding: 3vmin;
-     border: none;
-     border-bottom: 2px solid white;
-    }
-    .passlogin::placeholder{
-       font-size: 1.5rem;
-       font-weight: bolder;
-       color : red;
-    }
-    label{
-      color : white;
-      font-size: 1.2rem;;
-    }
-    #btn{
-      width : 100%;
-      height : 45px;
-     }
-     #btn:hover{
-      background-color: #f70776;
-      color : black;
-      box-shadow: 10px 4px 4px #f70776;
-     }
-  </style>
 </head>
 <body>
 
   <body>
-    <div class="firstpage">
-      <div class="navbar">
-        <div class="logo"></div>
-        <div class="navoptions">
+    <div class="navbar">
+
+      <div class="nav-logo">
+        <div class="logo">
+          <img src="images/bakerylogo1.png" id="logo-nav">
+        </div>
+      </div>
+
+      <div class="nav-options">
           <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="login.html">LOGIN</a></li>
+            <li><a class="home" href="index.html">HOME</a></li>
+            <li><a  class="login"href="login.html">LOGIN</a></li>
             <li><select id="option-nav">
               <option >BIRTHDAY CAKE</option>
               <option>PARTIES CAKE</option>
               <option>WEDDING CAKE</option>
               <option>WEDDING CAKE</option>
-  
             </select></li>
-            <li><a href="gallery.html">GALLERY</a></li>
-            <li><a href="products.html">PRODUCTS</a></li>
-  
+            <li><a  class="gallery" href="galery.html">GALLERY</a></li>
+            <li><a class="sale" href="products.html">PRODUCTS</a></li>
           </ul>
+      </div>
+   
+      <div class="nav-icons">
+        <div class="search-icon">
+          <i class="fa-solid fa-magnifying-glass search-icon icons"></i>
         </div>
-        <div class="navicons">
-          <i class="fa-solid fa-magnifying-glass search-icon"></i>
-          <i class="fa-solid fa-cart-arrow-down cart-icon"></i>
+        <div class="cart-icon">
+          <i class="fa-solid fa-cart-arrow-down cart-icon icons"></i>
+        </div>
       </div>
-      </div>
+    
+    </div>
     <div class="regform">
          <form action="https://api.web3forms.com/submit" method="POST">
 
