--- a/products.html
+++ b/products.html
@@ -12,114 +12,63 @@
   referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mobile.css">
-   <style>
-    .navbar{
-      position: fixed;
-      top : 0;
-      left: 0;
-      width: 100%;
-      z-index: 1;
-    }
-        body{
-          width : 120v;
-          background-image: url("images/upchoco.jpg");
-      background-size: cover;
-      background-position: center;
-      background-size: 100% 100%;
-      object-fit: cover;
-        }
-     .slider-ramp{
-      height : 90vh;
-      max-width: 100vh;
-      margin: auto;
-      width : 100%;
-         position: relative;
-         bottom : 390px;
-         
-     }
-     .slider{
-      height : 50rem;
-      width : 50rem;
-      border : 7rem solid red;
-      border-radius: 50%;
-      display: flex;
-      transition: rotate 1s ;
-      box-shadow: 10px 5px 5px red;
-      /* animation: slide 3s ease-in-out 0s infinite normal; */
-     }
-     @keyframes slide{
-      from{
-        transform: rotate(0deg);
-      }
-      to{
-        transform: rotate(360deg);
-      }
-     }
-     .slide img{
-       height : 15rem;
-       position: relative;
-     }
-     #cake1{
-      position: relative;
-      left : 180px;
-      top : 480px;
-     }
-     #cake2{
-      position: relative;
-      left : 250px;
-      top : 150px;
-     }
-     #cake3{
-      position: relative;
-      right: 650px;
-      top : 150px;
-     }
-     #cake4{
-      position: relative;
-      right: 550px;
-      bottom : 150px;
-     }
-
-     .images-control{
-      display: flex;
-      justify-content: center;
-      margin-top: 100px;;
-      flex-wrap: wrap;
-     }
-     .images-control img{
-      height : 10rem;
-      width : 10rem;
-      margin-left: 20px;
-      flex-grow: 1;
-     }
-   
-   </style>
 </head>
+<style>
+  .navbar{
+  position: fixed;
+  top : 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+body{
+      width : 120v;
+      background-image: url("images/upchoco.jpg");
+  background-size: cover;
+  background-position: center;
+  background-size: 100% 100%;
+  object-fit: cover;
+    }
+    @media (max-width : 700px){
+      .navbar{
+    position: relative;
+  }
+    }
+</style>
 <body>
-  <div class="firstpage">
-    <div class="navbar">
-      <div class="logo"></div>
-      <div class="navoptions">
+  <div class="navbar">
+
+    <div class="nav-logo">
+      <div class="logo">
+        <img src="images/bakerylogo1.png" id="logo-nav">
+      </div>
+    </div>
+
+    <div class="nav-options">
         <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="login.html">LOGIN</a></li>
+          <li><a class="home" href="index.html">HOME</a></li>
+          <li><a  class="login"href="login.html">LOGIN</a></li>
           <li><select id="option-nav">
             <option >BIRTHDAY CAKE</option>
             <option>PARTIES CAKE</option>
             <option>WEDDING CAKE</option>
             <option>WEDDING CAKE</option>
-
           </select></li>
-          <li><a href="gallery.html">GALLERY</a></li>
-          <li><a href="products.html">PRODUCTS</a></li>
-
+          <li><a  class="gallery" href="galery.html">GALLERY</a></li>
+          <li><a class="sale" href="products.html">PRODUCTS</a></li>
         </ul>
+    </div>
+ 
+    <div class="nav-icons">
+      <div class="search-icon">
+        <i class="fa-solid fa-magnifying-glass search-icon icons"></i>
       </div>
-      <div class="navicons">
-        <i class="fa-solid fa-magnifying-glass search-icon"></i>
-        <i class="fa-solid fa-cart-arrow-down cart-icon"></i>
+      <div class="cart-icon">
+        <i class="fa-solid fa-cart-arrow-down cart-icon icons"></i>
+      </div>
     </div>
-    </div>
+  
+  </div>
     <div class="slider-ramp">
        <div class="slider">
          <div class="slide">
